...
        app:layout_constraintBottom_toTopOf="@+id/btn_ln_floor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_reciprocal_round" />

    <TextView
        android:id="@+id/formula"
        android:layout_width="386dp"
        android:layout_height="65dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="@color/white"
...
